compiler/tests/invalid_programs/no_end_classes.jm
!SyntaxError

class Foo
  v:String

  def new(s:String)
    v = s
  end
